k8s/apps/konoha/ducknet/xbackbone/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xbackbone
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: xbackbone
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - "IPv4"
