k8s/apps/konoha/ducknet/xbackbone/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
  name: xbackbone-ingress
spec:
  rules:
  - host: s.duck.moe
    http: &http_rules
      paths:
      - path: /
        backend:
          serviceName: xbackbone
          servicePort: http
  - host: s.duck.me.uk
    http: *http_rules
  - host: share.duck.moe
    http: *http_rules
  tls:
  - hosts:
    - share.duck.moe
    - s.duck.moe
    - s.duck.me.uk
    secretName: xbackbone-cert
